--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,6 +27,7 @@ jobs:
     - name: Run Pyre
       run: |
         python -m pip install pyre-check
+        python -m pip install dacite
         pyre --source-directory src check
     - name: Build package
       run: python -m build
